Change the name of the title in HTML document

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Working on a Web Application</title>
+  <title>Working on a Web Application to become a web developer</title>
   <style>
     #verse {
       font-style: italic;
